--- a/templates/back_office/car/edit.html.twig
+++ b/templates/back_office/car/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Car</h1>
 
-    {{ include('car/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('back_office/car/_form.html.twig', {'button_label': 'Update'}) }}
 
     <a href="{{ path('app_car_index') }}">back to list</a>
 
-    {{ include('car/_delete_form.html.twig') }}
+    {{ include('back_office/car/_delete_form.html.twig') }}
 {% endblock %}
