--- a/templates/back_office/car/new.html.twig
+++ b/templates/back_office/car/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Create new Car</h1>
 
-    {{ include('car/_form.html.twig') }}
+    {{ include('back_office/car/_form.html.twig') }}
 
     <a href="{{ path('app_car_index') }}">back to list</a>
 {% endblock %}
