--- a/templates/back_office/car/show.html.twig
+++ b/templates/back_office/car/show.html.twig
@@ -38,5 +38,5 @@
 
     <a href="{{ path('app_car_edit', {'id': car.id}) }}">edit</a>
 
-    {{ include('car/_delete_form.html.twig') }}
+    {{ include('back_office/car/_delete_form.html.twig') }}
 {% endblock %}
