--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -20,7 +20,7 @@
         <input type="password" id="password" name="_password">
 
         {# If you want to control the URL the user is redirected to on success #}
-        <input type="hidden" name="_target_path" value="/back-office/car">
+        <input type="hidden" name="_target_path" value="/login-redirect">
 
          <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
