--- a/templates/back_office/user/_form.html.twig
+++ b/templates/back_office/user/_form.html.twig
@@ -2,3 +2,16 @@
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
+{# <pre>
+    {{ dump(form) }}
+</pre>
+
+    {{ form_start(form) }}
+     {{ form_row(form.email) }}
+
+     {{ form_row(form.password) }}
+
+     {{ form_row(form.name) }}
+
+     {{ form_row(form.surname) }}
+    {{ form_end(form) }} #}
