--- a/templates/back_office/user/show.html.twig
+++ b/templates/back_office/user/show.html.twig
@@ -38,5 +38,5 @@
 
     <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
 
-    {{ include('user/_delete_form.html.twig') }}
+    {{ include('back_office/user/_delete_form.html.twig') }}
 {% endblock %}
