recherche AJAX complete, ajout des formulaire Contact et weekhours

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,4 +15,9 @@
     <body>
         {% block body %}{% endblock %}
     </body>
+    <footer>
+    
+        {% block contact_form %}{% endblock %}
+        
+    </footer>
 </html>
