--- a/templates/back_office/back_office_panel/admin_panel.html.twig
+++ b/templates/back_office/back_office_panel/admin_panel.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 {% if is_granted('ROLE_ADMIN') %} 
-
+<?php info> upload_max_filesize <php>
 <div class="example-wrapper">
     <h1>User index</h1>
 
@@ -42,7 +42,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_new') }}">Create new</a>
+    {# <a href="{{ path('app_user_new') }}">Create new</a> #}
     {% endif %}
 {% endblock %}
 
