--- a/templates/back_office/car/show.html.twig
+++ b/templates/back_office/car/show.html.twig
@@ -40,3 +40,6 @@
 
     {{ include('back_office/car/_delete_form.html.twig') }}
 {% endblock %}
+ {% block contact_form %}
+        {% include "back_office/car/_car_contact_form.html.twig" %}
+    {% endblock %}
