modification du formulaire horaire coté twig & changement dans aap Fixtures, Ajout de la logique en cas d'erreur d'enregistrement de fichier images

--- a/templates/back_office/back_office_panel/admin_panel.html.twig
+++ b/templates/back_office/back_office_panel/admin_panel.html.twig
@@ -1,10 +1,8 @@
-{% extends 'base_back_office.html.twig' %}
-
+{% extends '/back_office/base_back_office.html.twig' %}
 {% block title %}Panneau Administration Admin{% endblock %}
 
 {% block body %}
 {% if is_granted('ROLE_ADMIN') %} 
-<?php info> upload_max_filesize <php>
 <div class="example-wrapper">
     <h1>User index</h1>
 
