--- a/templates/back_office/services/show.html.twig
+++ b/templates/back_office/services/show.html.twig
@@ -21,7 +21,7 @@
             </tr>
             <tr>
                 <th>Picture_src</th>
-                <td>{{ service.pictureSrc }}</td>
+                <td>{{ service.picture_src }}</td>
             </tr>
         </tbody>
     </table>
