--- a/templates/back_office/week_hours/index.html.twig
+++ b/templates/back_office/week_hours/index.html.twig
@@ -9,8 +9,39 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello ! ✅</h1>
 
-    {{ form(form) }}
+    {{ form_start(form)}}
+    {% for day in days_of_week %}
+        
+        <div class="day-wrapper">
+            
+            <h3>{{day}}</h3>
+    {# 
+    Pas de panique je vais tout expliquer, la variable commenté 
+    renverra "lun_start_time", 
+    {{ form.vars.short_day_array[0] ~ '_start_time' }} 
+
+    short_day_array est composé du tableau des jours tronqués,
+    passé en variable twig via buildView() dans WeekHoursType.
+
+    pour itérer sur le tableau on ajoute [loop.index0]
+
+    ensuite on concatène la chaine et le résultat est le nom de chaque
+    clé associative référant un champ de WeekHoursType
+    #}
+
+     {# ex : form_row(form["lun_start_time"]) #}
+     {{ form_row(form[form.vars.short_day_array[loop.index0] ~ '_start_time'])}}
+     {{ form_row(form[form.vars.short_day_array[loop.index0] ~ '_end_time'])}}
+     {{ form_row(form[form.vars.short_day_array[loop.index0] ~ '_closed'])}}
+            
+        
+        </div>
+    {% endfor %} 
+
+
+     {{ form_rest(form)}}
+
 </div>
 {% endblock %}
