--- a/templates/back_office/back_office_panel/employee_panel.html.twig
+++ b/templates/back_office/back_office_panel/employee_panel.html.twig
@@ -1,5 +1,5 @@
-{% extends 'base_back_office.html.twig' %}
 
+{% extends '/back_office/base_back_office.html.twig' %}
 {% block title %}Panneau Administration Employé{% endblock %}
 
 {% block body %}
@@ -14,3 +14,4 @@
     </ul>
 </div>
 {% endblock %}
+
