ajout des horaires dans le footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,8 @@
     <footer>
     
         {% block contact_form %}{% endblock %}
-        
+
+        {{ render(path('app_schedule')) }}
+
     </footer>
 </html>
