--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -13,10 +13,10 @@
 
     <form action="{{ path('app_login') }}" method="post">
         <label for="username">Email:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}">
+        <input required="required" type="text" id="username" name="_username" value="{{ last_username }}">
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="_password">
+        <input required="required" type="password" id="password" name="_password">
 
         {# If you want to control the URL the user is redirected to on success #}
         <input type="hidden" name="_target_path" value="/login-redirect">
