--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -32,84 +32,140 @@
   margin-block : 0;
 }
 </style>
+<main class="home-container">
 
-{% for service in services %}
-    <div class="service-wrapper">
-      <h5>{{service.name}}</h5>
-      <p>{{service.description}}</p>
-      <p>{{service.picture_src}}</p>
-    </div>
-  {% endfor %}
-  <div>-------------------------</div>
-{% for testimonial in testimonials %}
-    <div class="testimonial-wrapper">
-      <h5>{{testimonial.name}}</h5>
-      <h5>{{testimonial.surname}}</h5>
-      <p>{{testimonial.message}}</p>
-      <p>{{testimonial.note}}</p>
-    </div>
-  {% endfor %}
+    <section class="hero-section  text-white text-center">
+    <div class="hero-section-bg-overlay"></div>
+        <div class="container">
+          <h1 class="h1 display-1">Bienvenue au Garage Parrot</h1>
+          <p class="lead">Passionné automobile et expert en réparation de véhicules </p>
+          <a href="{{ path('app_car_index') }}" class="btn btn-primary btn-lg">Explorer</a>
+        </div>
+      </section>
+      {# ===============
 
-<!-- Slider main container -->
+          SERVICE
 
-<div class="swiper">
-  <!-- Additional required wrapper -->
-  <div class="swiper-wrapper">
-    <!-- Slides -->
-  {% for car in latest_cars %}
-    <div class="swiper-slide">
-      <h5>{{car.name}}</h5>
-      <p>{{car.description}}</p>
-    </div>
-  {% endfor %}
+      ==================#}
+<section class="service mx-3 my-5">
 
+      <h2 class="display-2 my-4 text-center">Nos Services</h2>
+<div class="container">
+  <div class="accordion" id="accordionService">
+      
+      {% for service in services %}
+        {# {{ service.id }} #}
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{{service.name}}" aria-expanded="false" aria-controls="{{service.name}}">
+              <p>{{service.name}}</p>
+            </button>
+          </h2>
+          <div id="{{service.name}}" class="accordion-collapse collapse" data-bs-parent="#accordionService">
+            <div class="accordion-body">
+                <p>{{service.description}}</p>
+                <img class="rounded accordion-picture " src="{{ asset('service_uploads/' ~ service.picture_src) }}"></img>
+                <a class="btn btn-primary" href="{{ path('app_display_services') }}">En savoir Plus</a>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
   </div>
-  <!-- If we need pagination -->
-  <div class="swiper-pagination"></div>
-
-  <!-- If we need navigation buttons -->
-  {# <div class="swiper-button-prev"></div>
-  <div class="swiper-button-next"></div> #}
-
-  <!-- If we need scrollbar -->
-  <div class="swiper-scrollbar"></div>
 </div>
 
+</section>
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<section class="testimonials my-5 mx-3">
+
+        <h2 class="display-2 my-4 text-center">Témoignages</h2>
+<div class="container testimonial-wrapper">
+
+    {% for testimonial in testimonials %}
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title text-center">{{testimonial.note}}</h5>
+      <p class="card-text">{{testimonial.message}}</p>
+      <h6 class="card-subtitle mb-2 text-body-secondary">{{testimonial.name}}</h6>
+      <h6 class="card-subtitle mb-2 text-body-secondary">{{testimonial.surname}}</h6>
+    </div>
+  </div>
+  {% endfor %}
+</div>
+</section>
+
+
+<section class="cars my-5 mx-3">
+    <h2 class="display-2 my-4 text-center ">Nos dernières voitures</h2>
+
+<div id="carCarousel" class="carousel slide">
+    <div class="carousel-inner">
+        
+        {% for car in latest_cars %}
+          
+        <div class="carousel-item">
+                      {# on affiche le nom du fichier stocké en base de donné 
+                        auquel on fais le lien avec le chemin du dossier 
+                        pour donner le chemin d'accès à l'image  #}
+          <img src="{{ asset("car_uploads/") ~ car.ImageCollection.Values[0].ImageUrl }}" class="d-block w-100" alt="...">
+        </div>
+       
+        {% endfor %}
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+</section>
+
+<section class="about my-5 mx-3 ">
+  <div class="about-wrapper p-3">
+
+    <div class="img">
+    </div>
+    <div class="text-wrapper">
+    <p>
+      Chez Garage Parrot, nous comprenons l'importance de votre 
+      voiture dans votre vie quotidienne. C'est pourquoi nous mettons
+      tout en œuvre pour offrir un service complet et professionnel,
+      afin de garantir que votre véhicule reste en parfait état de 
+      fonctionnement.
+    </p>
+    <p>
+      Nous sommes fiers de notre expertise technique et
+      de notre connaissance approfondie des différentes 
+      marques et modèles de voitures. Que vous conduisiez une
+      voiture de sport, une berline familiale ou un véhicule 
+      utilitaire, nous disposons des compétences et des ressources
+      nécessaires pour vous offrir des services personnalisés
+      adaptés à vos besoins spécifiques.Au Garage Parrot, nous
+      accordons une grande importance à la satisfaction de nos
+      clients. Notre équipe amicale et attentionnée vous 
+      accueillera chaleureusement, et nous vous fournirons 
+      conseils honnêtes et transparents sur les travaux
+      nécessaires pour votre véhicule. Nous nous 
+      à vous offrir un service fiable, rapide et abordable,
+      afin que vous puissiez reprendre la route en toute.
+    </p>
+    </div>
+  </div>
+</section>
+
+  </main>
+
+
+{% endblock %}
+{% block script %}
 <script>
+// Récupère la première slide du carrousel et lui donne
+// la propriété "active" sans quoi il ne fonctionnera pas 
+let innerSlide = document.querySelector(".carousel-inner")
 
-const swiper = new Swiper('.swiper', {
-  // Optional parameters
-  direction: 'horizontal',
-  loop: true,
-
-  // If we need pagination
-  pagination: {
-    el: '.swiper-pagination',
-  },
-
-  // Navigation arrows
-  {# navigation: {
-    nextEl: '.swiper-button-next',
-    prevEl: '.swiper-button-prev',
-  }, #}
-
-  // And if we need scrollbar
-  scrollbar: {
-    el: '.swiper-scrollbar',
-  },
-   spaceBetween: 25,
-   slidesPerView : 5,
-   slidesPerGroup : 5,
-
-  autoplay: {
-    delay : 2000,
-    disableOnInteraction : false,
-    pauseOnMouseEnter: true,
-  }
-});
-
+  innerSlide.firstElementChild.classList.add("active")
 </script>
-
 {% endblock %}
