--- a/templates/back_office/back_office_panel/admin_panel.html.twig
+++ b/templates/back_office/back_office_panel/admin_panel.html.twig
@@ -3,28 +3,26 @@
 
 {% block body %}
 {% if is_granted('ROLE_ADMIN') %} 
-<div class="example-wrapper">
+<div class="col-9 my-5  ">
     <h1>User index</h1>
 
     <table class="table">
-        <thead>
+        <thead >
             <tr>
                 <th>Id</th>
                 <th>Email</th>
                 <th>Roles</th>
-                <th>Password</th>
                 <th>Name</th>
                 <th>Surname</th>
                 <th>actions</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
         {% for user in users %}
             <tr>
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
                 <td>{{ user.name }}</td>
                 <td>{{ user.surname }}</td>
                 <td>
