--- a/templates/back_office/car/_car_contact_form.html.twig
+++ b/templates/back_office/car/_car_contact_form.html.twig
@@ -1,10 +1,16 @@
+{% form_theme form 'bootstrap_5_layout.html.twig' %}
+
 {{ form_start(form) }}
-    {{ form_row(form.title) }}
+<div class="row">
+    {{ form_row(form.title, {'value' : app.request.uri})  }}
     {{ form_row(form.name) }}
     {{ form_row(form.surname) }}
     {{ form_row(form.email) }}
     {{ form_row(form.phone) }}
     {{ form_row(form.message) }}
     {{ form_row(form.link , {'value' : app.request.uri} ) }}
-    <button class="btn">{{ button_label|default('Envoyer') }}</button>
+    <button class=" btn text-center my-2 btn-primary">{{ button_label|default('Envoyer') }}</button>
+</div>
 {{ form_end(form) }}
+
+
