--- a/templates/back_office/car/show.html.twig
+++ b/templates/back_office/car/show.html.twig
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <th>Name</th>
-                <td>{{ car.name }}</td>
+                <td id="car-name">{{ car.name }}</td>
             </tr>
             <tr>
                 <th>Price</th>
@@ -40,6 +40,3 @@
 
     {{ include('back_office/car/_delete_form.html.twig') }}
 {% endblock %}
- {% block contact_form %}
-        {% include "back_office/car/_car_contact_form.html.twig" %}
-    {% endblock %}
