--- a/templates/car_index/index.html.twig
+++ b/templates/car_index/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CarIndexController!{% endblock %}
+{% block title %}Recherche Véhicule{% endblock %}
 
 {% block body %}
 
