--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -1,16 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LoginController!{% endblock %}
+{% block title %}Connexion{% endblock %}
 
 {% block body %}
-
-
-<div class="login_container h-50 d-flex justify-content-center align-items-center">
  
         {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-<div class="container">
+<div class="container login_container d-flex justify-content-center align-items-center">
     <form  class="mb-3" action="{{ path('app_login') }}" method="post">
         <label class="fomr_label" for="username">Email:</label>
         <input  class="form-control" required="required" type="text" id="username" name="_username" value="{{ last_username }}">
@@ -23,7 +20,7 @@
 
          <input   type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-        <button class="btn btn-primary" type="submit">Se Connecter</button>
+        <button class="btn btn-primary my-2" type="submit">Se Connecter</button>
     </form>
 </div>
 
