ajout de bootstrap aux pages back-offices

--- a/templates/back_office/base_back_office.html.twig
+++ b/templates/back_office/base_back_office.html.twig
@@ -14,7 +14,7 @@
         {% endblock %}
     </head>
     <div class="m-0 p-0 container-fluid  row d-flex h-100">
-        <header class="col-3 p-0 h-100">
+        <header class="col-3 p-0 ">
             <nav class="h-100  p-3 text-white bg-dark">
             <ul class="nav nav-pills flex-column mb-auto">
 
