--- a/templates/back_office/services/edit.html.twig
+++ b/templates/back_office/services/edit.html.twig
@@ -1,13 +1,17 @@
-{% extends 'base.html.twig' %}
+{% extends '/back_office/base_back_office.html.twig' %}
 
-{% block title %}Edit Services{% endblock %}
+{% block title %}Modification de Service{% endblock %}
 
 {% block body %}
-    <h1>Edit Services</h1>
+<div class="col-9">
+    <h1>Modification de Service</h1>
 
-    {{ include('back_office/services/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_services_index') }}">back to list</a>
-
+    {{ include('back_office/services/_form.html.twig') }}
+    <div class="my-2">
     {{ include('back_office/services/_delete_form.html.twig') }}
+    </div>
+
+    <a class="btn btn-primary"href="{{ path('app_services_index') }}">Retour</a>
+</div>
 {% endblock %}
