--- a/templates/back_office/services/new.html.twig
+++ b/templates/back_office/services/new.html.twig
@@ -1,11 +1,15 @@
-{% extends 'base.html.twig' %}
+{% extends '/back_office/base_back_office.html.twig' %}
 
-{% block title %}New Services{% endblock %}
+{% block title %}Enregistrement de service{% endblock %}
 
 {% block body %}
-    <h1>Create new Services</h1>
+<div class="col-9">
+    <h1>Enregistrement de service</h1>
 
     {{ include('back_office/services/_form.html.twig') }}
-
-    <a href="{{ path('app_services_index') }}">back to list</a>
+    <div class="my-2">
+    <a class="btn btn-primary" href="{{ path('app_services_index') }}">Retour</a>
+    </div>
+</div>
 {% endblock %}
+
