--- a/templates/back_office/services/show.html.twig
+++ b/templates/back_office/services/show.html.twig
@@ -1,18 +1,15 @@
-{% extends 'base.html.twig' %}
+{% extends '/back_office/base_back_office.html.twig' %}
 
-{% block title %}Services{% endblock %}
+{% block title %} {{service.name}} {% endblock %}
 
 {% block body %}
+<div class="col-9">
     <h1>Services</h1>
 
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ service.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
+                <th>Nom du service</th>
                 <td>{{ service.name }}</td>
             </tr>
             <tr>
@@ -20,15 +17,17 @@
                 <td>{{ service.description }}</td>
             </tr>
             <tr>
-                <th>Picture_src</th>
-                <td>{{ service.picture_src }}</td>
+                <th>Image</th>
+                <td><img style="width: 50px" src="{{ asset('service_uploads/' ~ service.picture_src)}}"></td>
             </tr>
         </tbody>
     </table>
+    <div class="d-flex gap-3" >
+        <a class="btn btn-primary" href="{{ path('app_services_index') }}">Retour</a>
 
-    <a href="{{ path('app_services_index') }}">back to list</a>
+        <a  class="btn btn-warning" href="{{ path('app_services_edit', {'id': service.id}) }}">Modifier</a>
 
-    <a href="{{ path('app_services_edit', {'id': service.id}) }}">edit</a>
-
-    {{ include('back_office/services/_delete_form.html.twig') }}
+        {{ include('back_office/services/_delete_form.html.twig') }}
+    </div>
+</div>
 {% endblock %}
