--- a/templates/back_office/week_hours/index.html.twig
+++ b/templates/back_office/week_hours/index.html.twig
@@ -1,20 +1,29 @@
-{% extends 'base.html.twig' %}
+{% extends '/back_office/base_back_office.html.twig' %}
 
-{% block title %}Hello WeekHoursController!{% endblock %}
+{% block title %}Gestion des Horaires{% endblock %}
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
+    body{
+        height: 400px;
+    }
+    .day-wrapper{
+        border-radius: 5px;
+        /* box-shadow : 2px 2px 1px 2px #000 */
+        outline : 1px solid black;
+    }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello ! ✅</h1>
+<div class="container col-9 ">
+    <h1>Gestion des horaires</h1>
+    {% form_theme form 'bootstrap_5_layout.html.twig' %}
 
+<div class="container-fluid row">
     {{ form_start(form)}}
+<div class="container-fluid row col-12">
     {% for day in days_of_week %}
         
-        <div class="day-wrapper">
+        <div class="day-wrapper col-md-5 m-2">
             
             <h3>{{day}}</h3>
     {# 
@@ -35,13 +44,15 @@
      {{ form_row(form[form.vars.short_day_array[loop.index0] ~ '_start_time'])}}
      {{ form_row(form[form.vars.short_day_array[loop.index0] ~ '_end_time'])}}
      {{ form_row(form[form.vars.short_day_array[loop.index0] ~ '_closed'])}}
-            
-        
-        </div>
+    </div>
     {% endfor %} 
+</div>
 
-
+    <div class="col-12">
      {{ form_rest(form)}}
+    </div>
+</div>
+
 
 </div>
 {% endblock %}
