--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -90,7 +90,7 @@
         </div>
 
         <div class="container col-6 d-flex align-items-center justify-content-center">
-            {{ render(path('app_schedule')) }}
+            {# {{ render(path('app_schedule')) }} #}
         </div>
 </div>
 
