FEATURES : ajout d'un service d'enregistrement d'image

--- a/templates/back_office/base_back_office.html.twig
+++ b/templates/back_office/base_back_office.html.twig
@@ -19,7 +19,11 @@
         <header class="col-3 p-0 ">
             <nav class="h-100  p-3 text-white bg-dark">
             <ul class="nav nav-pills flex-column mb-auto">
-
+                <li class="nav-item mb-2">
+                <a style="width:50%" href="{{path("app_home")}}">
+                    <img style="width:50%"  src=" {{asset("logo.png")}} " alt="">
+                </a>
+                </li>
                 <li class"nav-item "> 
                     <a class="nav-link text-white d-flex gap-3" href="{{ path("app_login_redirect")}}">
                     <i class="bi bi-house-door-fill " ></i>
