--- a/templates/back_office/car/show.html.twig
+++ b/templates/back_office/car/show.html.twig
@@ -39,7 +39,7 @@
         </tbody>
     </table>
     <div class="container ">
-        <a class="my-2 btn btn-dark" href="{{ path('app_car_index') }}">Retour</a>
+        <a class="my-2 btn btn-dark" href="{{ path('back_office_app_car_index') }}">Retour</a>
 
         <a class="btn btn-warning py-2" href="{{ path('app_car_edit', {'id': car.id}) }}">Modifier</a>
 
