--- a/templates/car_index/index.html.twig
+++ b/templates/car_index/index.html.twig
@@ -92,7 +92,7 @@
 
 
 
-{% set imagePath = path('app_car_show', {'id' : 1}) %}
+{% set imagePath = path('app_car_front_display', {'id' : 1}) %}
 <script>
 
 let cardsContainer = document.querySelector(".cards-container")
