--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -3,11 +3,13 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
- 
+
+        
+<div class="container login_container d-flex flex-column align-item-center mt-3">
+        <img src="{{asset("logo.png")}}" alt="" srcset="">
         {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        <div style="text-align:center;margin:15px;font-size:20px">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-<div class="container login_container d-flex justify-content-center align-items-center">
     <form  class="mb-3" action="{{ path('app_login') }}" method="post">
         <label class="fomr_label" for="username">Email:</label>
         <input  class="form-control" required="required" type="text" id="username" name="_username" value="{{ last_username }}">
